feat: add GetOneUserController and Its Route
